# taurasim

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
TauraSim/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
build_isolated/: catkin_make_isolated.cache
build_isolated/taurasim/devel/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/taurasim/devel/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
build_isolated/taurasim/devel/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/taurasim/devel/catkin_generated/installspace/: .rosinstall  local_setup.sh  setup.sh
build_isolated/taurasim/devel/devel/: .catkin
build_isolated/taurasim/devel/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/taurasim/devel/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/taurasim/devel/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
config/: motor_diff_drive.yml  motor_direct_drive.yml  ros_control_config.yml
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: taurasim.pc
devel/share/taurasim/cmake/: taurasimConfig.cmake
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/taurasim/: _setup_util.py  setup.bash  setup.sh  setup.zsh
devel_isolated/taurasim/lib/pkgconfig/: taurasim.pc
devel_isolated/taurasim/share/taurasim/cmake/: taurasimConfig.cmake
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/taurasim/lib/taurasim/: keyboard_node  spawn_robots  vision_proxy
install/taurasim/share/taurasim/: gazebo.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  simulation_robot.launch.py  spawn_robot.launch.py
install/taurasim/share/taurasim/config/: motor_diff_drive.yml  ros_control_config.yml
install/taurasim/share/taurasim/launch/: gazebo.launch.py  simulation_1x1.launch.py  simulation_match.launch.py  simulation_robot.launch.py  simulation_team.launch.py  spawn_robot.launch.py  test.launch.py
launch/: export_images.launch  gazebo.launch  gazebo.launch.py  simulation_1x1.launch.py  simulation_match.launch.py  simulation_robot.launch.py  simulation_team.launch  simulation_team.launch.py  spawn_robot.launch.py
log/: latest_build
media/materials/scripts/: team_blue.material  team_yellow.material
models/vss_camera/: model.sdf
models/vss_field/: model.config
models/vss_field_5/: model.config
scripts/: keyboard_node.py
src/taurasim/: CMakeLists.txt  package.xml
src/taurasim/launch/: export_video.launch  simulation_match.launch  simulation_robot.launch  spawn_robot.launch
src/taurasim/models/vss_ball/: model.config
src/taurasim/models/vss_camera/: model.config
src/taurasim/models/vss_field/: model.sdf
src/taurasim/scripts/: spawn_robots.py  vision_proxy.py
taurasim/scripts/: controller_node.py  keyboard_node.py  spawn_robots.py  vision_proxy.py
urdf/: generic_vss_robot.gazebo  generic_vss_robot.urdf  generic_vss_robot.xacro  motor.xacro
worlds/: vss_field_camera.world
(+9 files in other folders)
