<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taurasim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucas1marchesan@gmail.com">lucas</maintainer>
  <license>TODO: License declaration</license>

  <!-- Ferramenta de construção para pacotes Python -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependências do ROS -->
  <depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>rviz2</depend>

  <depend>gazebo_ros</depend> <!-- Gazebo ROS Integration -->
  <depend>gazebo_ros_pkgs</depend> <!-- Pacote Gazebo ROS (essencial para integração com o Gazebo) -->

  <!-- Dependências de simulação -->
  <depend>gazebo_ros2_control</depend> <!-- Controladores de Gazebo para simulação -->
  <depend>controller_manager</depend> <!-- Gerenciador de controladores no ROS 2 -->
  
<depend>rqt_robot_steering</depend>
  <!-- Dependências para teste -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Dependências de execução e construção para Python -->
  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
